@@ -26,9 +26,11 @@
 
 package org.mitre.mpf.wfm.segmenting;
 
-import org.apache.camel.CamelContext;
-import org.apache.camel.Message;
-import org.apache.camel.impl.DefaultMessage;
+import java.util.List;
+import java.util.Map;
+
+import javax.inject.Inject;
+
 import org.mitre.mpf.wfm.buffers.DetectionProtobuf;
 import org.mitre.mpf.wfm.camel.operations.detection.DetectionContext;
 import org.mitre.mpf.wfm.data.entities.persistent.Media;
@@ -37,12 +39,6 @@ import org.mitre.mpf.wfm.data.entities.transients.Track;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
-
-import javax.inject.Inject;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
 
 /**
  * This segmenter returns an empty message collection and warns that the provided {@link Media}
@@ -54,59 +50,57 @@ public class DefaultMediaSegmenter implements MediaSegmenter {
 
     public static final String REF = "defaultMediaSegmenter";
 
-    private final CamelContext _camelContext;
+    private final TriggerProcessor _triggerProcessor;
 
     @Inject
-    DefaultMediaSegmenter(CamelContext camelContext) {
-        _camelContext = camelContext;
+    DefaultMediaSegmenter(TriggerProcessor triggerProcessor) {
+        _triggerProcessor = triggerProcessor;
     }
 
+
     @Override
-    public List<Message> createDetectionRequestMessages(Media media, DetectionContext context) {
-        log.warn("Media {} is of the MIME type '{}' and will be processed generically.",
+    public List<DetectionRequest> createDetectionRequests(Media media, DetectionContext context) {
+        log.info("Media {} is of the MIME type '{}' and will be processed generically.",
                  media.getId(),
                  media.getMimeType());
 
         if (!context.isFirstDetectionTask() && MediaSegmenter.feedForwardIsEnabled(context)) {
-            return createFeedForwardMessages(media, context);
+            return _triggerProcessor.getTriggeredTracks(media, context)
+                    .map(t -> createFeedForwardRequest(t, media, context))
+                    .toList();
         }
 
-        return Collections.singletonList(
-                createProtobufMessage(media, context,
-                                      DetectionProtobuf.DetectionRequest.GenericRequest.newBuilder().build()));
+        var genericRequest = DetectionProtobuf.DetectionRequest.GenericRequest.newBuilder().build();
+        var protobuf = createProtobuf(media, context, genericRequest);
+        return List.of(new DetectionRequest(protobuf));
     }
 
-    private Message createProtobufMessage(Media media, DetectionContext context,
-                                          DetectionProtobuf.DetectionRequest.GenericRequest genericRequest) {
-        DetectionProtobuf.DetectionRequest detectionRequest = MediaSegmenter.initializeRequest(media, context)
+
+    private static DetectionProtobuf.DetectionRequest createProtobuf(
+            Media media, DetectionContext context,
+            DetectionProtobuf.DetectionRequest.GenericRequest genericRequest) {
+        return MediaSegmenter.initializeRequest(media, context)
                 .setDataType(DetectionProtobuf.DetectionRequest.DataType.UNKNOWN)
                 .setGenericRequest(genericRequest)
                 .build();
-
-        Message message = new DefaultMessage(_camelContext);
-        message.setBody(detectionRequest);
-        return message;
     }
 
-    private List<Message> createFeedForwardMessages(Media media, DetectionContext context) {
-        List<Message> messages = new ArrayList<>();
-        for (Track track : context.getPreviousTracks()) {
 
-            DetectionProtobuf.DetectionRequest.GenericRequest.Builder genericRequest = DetectionProtobuf.DetectionRequest.GenericRequest.newBuilder();
+    private static DetectionRequest createFeedForwardRequest(
+            Track track, Media media, DetectionContext ctx) {
+        var genericRequest = DetectionProtobuf.DetectionRequest.GenericRequest.newBuilder();
 
-            Detection exemplar = track.getExemplar();
+        Detection exemplar = track.getExemplar();
 
-            DetectionProtobuf.GenericTrack.Builder genericTrackBuilder = genericRequest.getFeedForwardTrackBuilder()
-                    .setConfidence(exemplar.getConfidence());
+        var genericTrackBuilder = genericRequest.getFeedForwardTrackBuilder()
+                .setConfidence(exemplar.getConfidence());
 
-            for (Map.Entry<String, String> entry : exemplar.getDetectionProperties().entrySet()) {
-                genericTrackBuilder.addDetectionPropertiesBuilder()
-                        .setKey(entry.getKey())
-                        .setValue(entry.getValue());
-            }
-
-            messages.add(createProtobufMessage(media, context, genericRequest.build()));
+        for (Map.Entry<String, String> entry : exemplar.getDetectionProperties().entrySet()) {
+            genericTrackBuilder.addDetectionPropertiesBuilder()
+                    .setKey(entry.getKey())
+                    .setValue(entry.getValue());
         }
-        return messages;
+        var protobuf = createProtobuf(media, ctx, genericRequest.build());
+        return new DetectionRequest(protobuf, track);
     }
 }
